# next-active-object-anticipation

./: .env.example  .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt  run_demo.sh
adt/: README.md  config.yaml  gt.py  main_parallel.py  results.py  results_parallel.py
adt/additional_source/: algorithm_client.py  main_parallel_async.py  main_parallel_async_multi.py  main_parallel_v2.py  plots.ipynb  plots_.ipynb  plots_interactive.ipynb  plots_lines_all.ipynb  plots_tables.ipynb  plots_tables_new.ipynb  vectors.py  vectors_v2.py
adt/helpers/: extra.py  main_works.py
adt/utils/: call_llm.py  evaluation.py  llama.py  openai_models_async.py  openai_models_async_multi.py  openai_models_custom.py  rate_limit_v1.py  tools.py
configs/: config.yaml  default.yaml
docs/: architecture.md
results/gt/Apartment_release_clean_seq150_M1292/: user_object_movement.json
src/: activation.py  experiment_config.py  gt.py  llm_step.py  main.py  perception.py  results.py  results_parallel.py  state.py
src/evaluation/: results.py  results_parallel.py  select_best.py
src/helpers/: extra.py  write_to_excel.py
src/pipeline/: activation.py  experiment_config.py  llm_step.py  state.py  video.py
src/utils/: evaluation.py  llama.py  objectsGroup_user.py  openai_models.py  openai_models_async.py  openai_models_async_multi.py  openai_models_work.py  rate_limit.py  stats.py  tools.py
src/utils/txt_files/: prompts.txt  prompts_original.txt
src/visualization/: rr.py
tools/: make_algorithm_video.py
(+4 files in other folders)
